Fix panel overflow issues

--- a/features/admin.flow-builder-core.v1/components/resource-property-panel/resource-property-panel.scss
+++ b/features/admin.flow-builder-core.v1/components/resource-property-panel/resource-property-panel.scss
@@ -19,7 +19,18 @@
 :root {
     --wso2is-flow-builder-element-property-panel-background: var(--oxygen-palette-common-white);
     --wso2is-flow-builder-element-property-panel-width: 350px;
-    --wso2is-flow-builder-element-property-panel-mini-width: 350px;
+}
+
+@mixin open {
+    width: var(--wso2is-flow-builder-element-property-panel-width);
+    transition: width 225ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
+    overflow: hidden;
+}
+
+@mixin close {
+    width: 0;
+    transition: width 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
+    overflow: hidden;
 }
 
 .flow-builder-element-property-panel {
@@ -32,9 +43,19 @@
         border-left: 1px solid #E8E8E8;
     }
 
-    &.mini {
-        .flow-builder-element-property-panel {
-            width: var(--wso2is-flow-builder-element-property-panel-mini-width)
+    &:not(.open) {
+        @include close;
+
+        .MuiDrawer-paper {
+            @include close;
+        }
+    }
+
+    &.open {
+        @include open;
+
+        .MuiDrawer-paper {
+            @include open;
         }
     }
 }
