--- a/features/admin.server-configurations.v1/pages/registration-flow-builder/registration-flow-builder-page.scss
+++ b/features/admin.server-configurations.v1/pages/registration-flow-builder/registration-flow-builder-page.scss
@@ -17,13 +17,17 @@
  */
 
 .registration-flow-builder-page {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+
     .page-layout {
         .page-header {
             border-bottom: 1px solid var(--oxygen-palette-divider);
             padding: var(--oxygen-spacing-1) var(--oxygen-spacing-3);
             box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.05);
             height: 60px;
-            
+
             .registration-flow-builder-page-header-breadcrumbs {
                 .MuiBreadcrumbs-li {
                     cursor: pointer;
@@ -33,6 +37,6 @@
     }
 
     .decorated-visual-flow {
-        height: 90vh;
+        flex-grow: 1;
     }
 }
